--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "create-react-class": "^15.6.2",
     "cross-fetch": "^1.1.1",
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
+    "react-barcode": "^1.3.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
