--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "babel-polyfill": "^6.26.0",
     "create-react-class": "^15.6.2",
     "cross-fetch": "^1.1.1",
+    "jquery": "^3.2.1",
+    "material-ui": "^0.20.0",
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-barcode": "^1.3.2",
     "react-dom": "^16.2.0",
+    "react-materialize": "^1.1.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
