--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-barcode": "^1.3.2",
+    "react-card-flip": "^0.1.1",
     "react-dom": "^16.2.0",
     "react-materialize": "^1.1.2",
     "react-redux": "^5.0.6",
