--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.2.1",
     "material-ui": "^0.20.0",
     "materialize-css": "^0.100.2",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-barcode": "^1.3.2",
     "react-card-flip": "^0.1.1",
